Hotfix: FF grid bug
set max-width same as width fixes grid spillage for FF (not sure why
tho :/)

--- a/css/grid.styl
+++ b/css/grid.styl
@@ -132,6 +132,7 @@ grid($width = false, $gutter = false, $size = false, $cols = 12)
         flex-basis: ( 100% / $cols ) * col
       .grid-row > .item-{$size}-{col}
         width: ( 100% / $cols ) * col
+        max-width: ( 100% / $cols ) * col
       .grid-column > .item-{$size}-{col}
         height: ( 100% / $cols ) * col
 
